# Fractals

./: README.md  cantor_box.py  fern.py  julia_set.py  mandelbrot_set.py  pyproject.toml  setup.cfg  sierpinski_carpet.py  sierpinski_triangle.py  weierstrauss_fractal.py  weierstraussfrac.py
src/: cantor_box.py  sierpinski_triangle.py
src/fractals/: __init__.py  fern.py  julia_set.py  mandelbrot_set.py  sierpinski_carpet.py  weierstrauss_fractal.py
