[metadata]
name = Fractals
version = 0.0.1
author = Y. Natsume
author_email = None
description = A package for creating fractals.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natsunoyuki/Fractals
project_urls =
    Bug Tracker = https://github.com/natsunoyuki/Fractals/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
